Fix scrollbar rendering from the top

--- a/src/routes/+layout.css
+++ b/src/routes/+layout.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-rows: 50px 1fr;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .header {
@@ -10,7 +10,7 @@
     position: sticky;
     top: 0;
     background: #fff;
-    z-index: 1;
+    z-index: 2;
 }
 
 ul {
@@ -58,4 +58,5 @@ a.active::after {
 
 main {
     background-color: #ececec;
+    overflow-y: auto;
 }
